--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,7 +12,7 @@ grade: stable
 # https://forum.snapcraft.io/t/python-multiprocessing-sem-open-blocked-in-strict-mode/962
 confinement: strict
 
-architectures: [amd64, i386]
+architectures: [amd64]
 
 environment:
   PATH: $SNAP/bin:$SNAP/usr/bin:$PATH # :$SNAP/testrepository:
